# techradar

./: README.md  requirements.txt
notebooks/: ArchitectureDiscussions.ipynb  README.md  TechnologyRadar.ipynb  technology-radar-synthesis.md  technology-radar.md  updated-technology-radar.md  utils.py
project/: __init__.py  slides.md  tech_radar_analysis.py  technology-radar.md  updated-technology-radar.md
project/templates/: backend_evaluation.txt  coordinator_summary.txt  frontend_evaluation.txt  testing_evaluation.txt
project_old/: agents.py  main.py  tasks.py
tech_radar/: README.md  crew.py  main.py  pyproject.toml  report.md
tech_radar/config/: agents.yaml  tasks.yaml
tech_radar/files/: backend_analysis.md  coordinator_summary.md  frontend_analysis.md  testing_analysis.md
tech_radar/src/tech_radar/: crew.py  main.py
tech_radar/src/tech_radar/config/: agents.yaml
tech_radar/src/tech_radar/files/: backend_analysis.md  coordinator_summary.md  frontend_analysis.md  testing_analysis.md
