[project]
name = "tech_radar"
version = "0.1.0"
description = "tech-radar using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
tech_radar = "tech_radar.main:run"
run_crew = "tech_radar.main:run"
train = "tech_radar.main:train"
replay = "tech_radar.main:replay"
test = "tech_radar.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
